--- a/src/styles/components/_live-feed.scss
+++ b/src/styles/components/_live-feed.scss
@@ -3,6 +3,7 @@
 .mux__container {
     display: block;
     position: relative;
+    height: 100%;
 }
 
 #mux-player {
